Migração do projeto para o novo repositório site_mibitech com estrutura atualizada de frontend e backend

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,15 +1,15 @@
 version: "3.7"
 services:
-  django_app:
-    image: django_app:latest
+  site_mibitech_django:
+    image: site_mibitech_django:latest
     volumes:
-      - django_app_data:/app
+      - site_mibitech_django_data:/app
     networks:
       - network_public
     environment:
       - DJANGO_DEBUG=False
-      - DJANGO_ALLOWED_HOSTS=appteste.mibitech.com.br
-      - VIRTUAL_HOST=appteste.mibitech.com.br
+      - DJANGO_ALLOWED_HOSTS=site_mibitech.mibitech.com.br
+      - VIRTUAL_HOST=site_mibitech.mibitech.com.br
     deploy:
       mode: replicated
       replicas: 1
@@ -18,17 +18,17 @@ services:
           - node.role == manager
       labels:
         - traefik.enable=true
-        - traefik.http.routers.django_app.rule=Host(`appteste.mibitech.com.br`)
-        - traefik.http.routers.django_app.entrypoints=websecure
-        - traefik.http.routers.django_app.tls.certresolver=letsencryptresolver
-        - traefik.http.routers.django_app.service=django_app
-        - traefik.http.services.django_app.loadbalancer.server.port=8000
-        - traefik.http.services.django_app.loadbalancer.passHostHeader=true
+        - traefik.http.routers.site_mibitech_django.rule=Host(`site_mibitech.mibitech.com.br`)
+        - traefik.http.routers.site_mibitech_django.entrypoints=websecure
+        - traefik.http.routers.site_mibitech_django.tls.certresolver=letsencryptresolver
+        - traefik.http.routers.site_mibitech_django.service=site_mibitech_django
+        - traefik.http.services.site_mibitech_django.loadbalancer.server.port=8000
+        - traefik.http.services.site_mibitech_django.loadbalancer.passHostHeader=true
 
-  nginx:
-    image: nginx_app:latest
+  site_mibitech_nginx:
+    image: site_mibitech_nginx:latest
     volumes:
-      - nginx_data:/var/log/nginx
+      - site_mibitech_nginx_data:/var/log/nginx
     networks:
       - network_public
     deploy:
@@ -39,20 +39,20 @@ services:
           - node.role == manager
       labels:
         - traefik.enable=true
-        - traefik.http.routers.nginx_app.rule=Host(`nginx-appteste.mibitech.com.br`)
-        - traefik.http.routers.nginx_app.entrypoints=websecure
-        - traefik.http.routers.nginx_app.tls.certresolver=letsencryptresolver
-        - traefik.http.routers.nginx_app.service=nginx_app
-        - traefik.http.services.nginx_app.loadbalancer.server.port=80
-        - traefik.http.services.nginx_app.loadbalancer.passHostHeader=true
+        - traefik.http.routers.site_mibitech_nginx.rule=Host(`nginx-site_mibitech.mibitech.com.br`)
+        - traefik.http.routers.site_mibitech_nginx.entrypoints=websecure
+        - traefik.http.routers.site_mibitech_nginx.tls.certresolver=letsencryptresolver
+        - traefik.http.routers.site_mibitech_nginx.service=site_mibitech_nginx
+        - traefik.http.services.site_mibitech_nginx.loadbalancer.server.port=80
+        - traefik.http.services.site_mibitech_nginx.loadbalancer.passHostHeader=true
 
 volumes:
-  django_app_data:
+  site_mibitech_django_data:
     external: true
-    name: django_app_data
-  nginx_data:
+    name: site_mibitech_django_data
+  site_mibitech_nginx_data:
     external: true
-    name: nginx_data
+    name: site_mibitech_nginx_data
 
 networks:
   network_public:
