--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,13 @@
 FROM nginx:1.25-alpine
 
+# Remove default nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy custom nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Create directory for static files
+RUN mkdir -p /static
 
 EXPOSE 80
 
