--- a/traefik/dynamic/hosts.yml
+++ b/traefik/dynamic/hosts.yml
@@ -1,47 +1,43 @@
+# Este arquivo não é mais necessário, pois estamos usando a configuração do Traefik existente no servidor
+# As configurações de roteamento agora são definidas como labels no docker-compose.yml
+
+# Mantido apenas como referência
 http:
   routers:
-    frontend:
+    mibitech_frontend:
       rule: "Host(`site.mibitech.com.br`)"
-      service: "frontend"
+      service: "mibitech_frontend"
       entryPoints:
-        - web
+        - websecure
       priority: 10
-      # Adiciona informações específicas para este site
-      middlewares:
-        - mibitech-strip-prefix
+      tls:
+        certResolver: letsencryptresolver
     
-    backend-api:
+    mibitech_backend_api:
       rule: "Host(`site.mibitech.com.br`) && PathPrefix(`/api`)"
-      service: "backend"
+      service: "mibitech_backend"
       entryPoints:
-        - web
+        - websecure
       priority: 20
-      middlewares:
-        - mibitech-strip-prefix
-      middlewares:
-        - mibitech-strip-prefix
+      tls:
+        certResolver: letsencryptresolver
     
-    backend-admin:
+    mibitech_backend_admin:
       rule: "Host(`site.mibitech.com.br`) && PathPrefix(`/admin`)"
-      service: "backend"
+      service: "mibitech_backend"
       entryPoints:
-        - web
+        - websecure
       priority: 20
+      tls:
+        certResolver: letsencryptresolver
 
   services:
-    frontend:
+    mibitech_frontend:
       loadBalancer:
         servers:
           - url: "http://frontend:3000"
     
-    backend:
+    mibitech_backend:
       loadBalancer:
         servers:
           - url: "http://backend:8000"
-
-  middlewares:
-    mibitech-strip-prefix:
-      stripPrefix:
-        prefixes:
-          - "/mibitech"
-        forceSlash: true
