--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,12 +21,12 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    upstream django {
-        server mibitech-backend:8000;
+    upstream backend {
+        server backend:8000;
     }
 
     upstream frontend {
-        server mibitech-frontend:3000;
+        server frontend:3000;
     }
 
     server {
@@ -40,7 +40,7 @@ http {
 
         # API requests
         location /api/ {
-            proxy_pass http://django;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +49,7 @@ http {
 
         # Admin requests
         location /admin/ {
-            proxy_pass http://django;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
