Corrige erro 'host not found in upstream django:8000' padronizando nomes de serviços entre nginx.conf e django.conf

--- a/nginx/django.conf
+++ b/nginx/django.conf
@@ -1,9 +1,9 @@
 upstream django {
-    server mibitech-backend:8000;
+    server backend:8000;
 }
 
 upstream frontend {
-    server mibitech-frontend:3000;
+    server frontend:3000;
 }
 
 server {
