Atualiza configuração do Nginx e força reconstrução da imagem

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # Upstream para o serviço backend (Django)
     upstream django {
         server backend:8000;
     }
