--- a/nginx/django.conf
+++ b/nginx/django.conf
@@ -1,6 +1,6 @@
-# Upstream para o serviço backend (Django)
+# Upstream para o serviço Django
 upstream django {
-    server backend:8000;
+    server django_app_django_app:8000;
 }
 
 upstream frontend {
