Reverte para usar backend:8000 e aumenta CACHEBUST para 5

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,9 +21,9 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    # Upstream para o serviço Django
+    # Upstream para o serviço backend
     upstream django {
-        server django_app_django_app:8000;
+        server backend:8000;
     }
 
     upstream frontend {
