versão com backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,15 @@
-# Use Python as the base image
 FROM python:3.9-slim
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Set working directory
 WORKDIR /app
 
-# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y netcat && rm -rf /var/lib/apt/lists/*
 
-# Copy the rest of the application
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 8000
+ENV PYTHONPATH=/app
 
-# Command to run the application
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+RUN chmod +x start.sh
+
+CMD ["./start.sh"]
