versão com backend v2

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-# Database configuration
-DATABASE_URL=postgresql://postgres:Mfcd62!!@localhost:5432/mibitech
-
-# App configuration
-APP_HOST=0.0.0.0
-APP_PORT=8000
+# Database configuration\r\n
+DATABASE_URL=postgresql://postgres:Mfcd62!!@localhost:5432/mibitech\r\n
+\r\n
+# App configuration\r\n
+APP_HOST=0.0.0.0\r\n
+APP_PORT=8000\r\n
