versão com backend v2

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,8 @@ DATABASE_URL=postgresql://postgres:Mfcd62!!@postgres:5432/mibitech
 # App configuration
 APP_HOST=0.0.0.0
 APP_PORT=8000
+
+# Postgres configuration (for reference)
+POSTGRES_PASSWORD=Mfcd62!!
+POSTGRES_USER=postgres
+POSTGRES_DB=mibitech
