Ajuste em docker

--- a/backend/portainer-stack.yml
+++ b/backend/portainer-stack.yml
@@ -20,11 +20,10 @@ services:
         - "traefik.http.routers.backend.entrypoints=web,websecure"
         - "traefik.http.routers.backend.priority=100"
         - "traefik.http.routers.backend.tls.certresolver=letsencryptresolver"
-        - "traefik.http.routers.backend-appteste.entrypoints=web,websecure"
     networks:
-      - public-network
+      - traefik-public
     restart: always
 
 networks:
-  public-network:
+  traefik-public:
     external: true
