--- a/backend/portainer-stack.yml
+++ b/backend/portainer-stack.yml
@@ -15,7 +15,7 @@ services:
       replicas: 1
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.backend.rule=Host(`apirest.mibitech.com.br`) || (Host(`appteste.mibitech.com.br`) && PathPrefix(`/api`))"
+        - "traefik.http.routers.backend.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
         - "traefik.http.services.backend.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend.entrypoints=web,websecure"
         - "traefik.http.routers.backend.priority=100"
