--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,29 @@
-# Use Node.js as the base image
-FROM node:20-alpine
+# Build stage
+FROM node:20-alpine as builder
 
-# Set working directory
 WORKDIR /app
-
-# Copy package.json and package-lock.json
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy the rest of the application
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 3000
+# Runtime stage
+FROM node:20-alpine
+WORKDIR /app
 
-# Command to run the application
+# Copy from builder
+COPY --from=builder /app /app
+
+# Environment variables
+ENV NODE_ENV=production
+ENV API_BASE_URL=http://apirest.mibitech.com.br:8000
+ENV PORT=3000
+
+# Install production dependencies only
+RUN npm install --production
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s \
+  CMD curl -f http://localhost:3000/ || exit 1
+
+EXPOSE 3000
 CMD ["node", "server.js"]
