Versão final com contato.html

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://postgres:Mfcd62!!Mfcd62!!@server.mibitech.com.br:5432/mibitech
+      - DATABASE_URL=${DATABASE_URL}
       - APP_HOST=0.0.0.0
       - APP_PORT=8000
       - ENVIRONMENT=development
