--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://postgres:Mfcd62!!Mfcd62!!@server.mibitech.com.br:5432/mibitech
+sqlalchemy.url = ${DATABASE_URL}
 
 [loggers]
 keys = root,sqlalchemy,alembic
