--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.115.12
 uvicorn==0.34.0
 sqlalchemy==2.0.15
-psycopg2-binary==2.9.6
+psycopg2-binary==2.9.9
 python-multipart==0.0.6
 python-dotenv==1.0.0
-alembic==1.12.0
+alembic==1.15.2
 requests==2.32.3
+pydantic==2.11.2
+pydantic_core==2.33.1
