--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -57,6 +57,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Static HTML files
+        location ~ \.html$ {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Frontend requests
         location / {
             proxy_pass http://frontend;
