backend - correção 400 not found

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,12 +18,19 @@ services:
         - "traefik.http.routers.backend.rule=Host(`apirest.mibitech.com.br`)"
         - "traefik.http.services.backend.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend.entrypoints=web,websecure"
-        - "traefik.http.routers.backend-apirest.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
-        - "traefik.http.services.backend-apirest.loadbalancer.server.port=8000"
-        - "traefik.http.routers.backend-apirest.entrypoints=web,websecure"
         - "traefik.http.routers.backend.tls.certresolver=letsencryptresolver"
+        - "traefik.http.middlewares.cors-headers.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
+        - "traefik.http.middlewares.cors-headers.headers.accesscontrolallowheaders=*"
+        - "traefik.http.middlewares.cors-headers.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.cors-headers.headers.accesscontrolmaxage=100"
+        - "traefik.http.middlewares.cors-headers.headers.addvaryheader=true"
+        - "traefik.http.routers.backend.middlewares=cors-headers@docker"
         - "traefik.http.middlewares.strip-api-prefix.stripprefix.prefixes=/api"
-        - "traefik.http.routers.backend-apirest.middlewares=strip-api-prefix@docker"
+        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
+        - "traefik.http.services.backend-api.loadbalancer.server.port=8000"
+        - "traefik.http.routers.backend-api.entrypoints=web,websecure"
+        - "traefik.http.routers.backend-api.tls.certresolver=letsencryptresolver"
+        - "traefik.http.routers.backend-api.middlewares=strip-api-prefix@docker,cors-headers@docker"
     networks:
       - network_public
     restart: always
