--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,12 +25,20 @@ services:
         - "traefik.http.middlewares.cors-headers.headers.accesscontrolmaxage=100"
         - "traefik.http.middlewares.cors-headers.headers.addvaryheader=true"
         - "traefik.http.routers.backend.middlewares=cors-headers@docker"
-        - "traefik.http.middlewares.strip-api-prefix.stripprefix.prefixes=/api"
-        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
+        # Removendo o middleware que remove o prefixo /api, pois a aplicação espera esse prefixo
+        # - "traefik.http.middlewares.strip-api-prefix.stripprefix.prefixes=/api"
+        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api/`)"
         - "traefik.http.services.backend-api.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend-api.entrypoints=web,websecure"
         - "traefik.http.routers.backend-api.tls.certresolver=letsencryptresolver"
-        - "traefik.http.routers.backend-api.middlewares=strip-api-prefix@docker,cors-headers@docker"
+        - "traefik.http.middlewares.backend-api-headers.headers.customrequestheaders.X-Forwarded-Prefix=/api"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolallowheaders=*"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolmaxage=100"
+        - "traefik.http.middlewares.cors-api.headers.addvaryheader=true"
+        - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker,cors-headers@docker"
+        - "traefik.http.routers.backend-api.priority=20"
     networks:
       - network_public
     restart: always
