Correção do erro 404

--- a/backend/documents/portainer-stack.yml
+++ b/backend/documents/portainer-stack.yml
@@ -18,11 +18,16 @@ services:
         - "traefik.http.routers.backend.rule=Host(`apirest.mibitech.com.br`)"
         - "traefik.http.services.backend.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend.entrypoints=web,websecure"
-        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
+        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api/`)"
         - "traefik.http.services.backend-api.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend-api.entrypoints=web,websecure"
         - "traefik.http.middlewares.backend-api-headers.headers.customrequestheaders.X-Forwarded-Prefix=/api"
-        - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolallowheaders=*"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolmaxage=100"
+        - "traefik.http.middlewares.cors-api.headers.addvaryheader=true"
+        - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker,cors-api@docker"
         - "traefik.http.routers.backend.tls.certresolver=letsencryptresolver"
         - "traefik.http.routers.backend-api.tls.certresolver=letsencryptresolver"
         # Removendo o middleware que remove o prefixo /api, pois a aplicação espera esse prefixo
