--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -27,7 +27,7 @@ services:
         - "traefik.http.routers.backend.middlewares=cors-headers@docker"
         # Removendo o middleware que remove o prefixo /api, pois a aplicação espera esse prefixo
         # - "traefik.http.middlewares.strip-api-prefix.stripprefix.prefixes=/api"
-        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api/`)"
+        - "traefik.http.routers.backend-api.rule=Host(`apirest.mibitech.com.br`) && PathPrefix(`/api`)"
         - "traefik.http.services.backend-api.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend-api.entrypoints=web,websecure"
         - "traefik.http.routers.backend-api.tls.certresolver=letsencryptresolver"
@@ -37,7 +37,7 @@ services:
         - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=*"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolmaxage=100"
         - "traefik.http.middlewares.cors-api.headers.addvaryheader=true"
-        - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker,cors-headers@docker"
+        - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker,cors-api@docker"
         - "traefik.http.routers.backend-api.priority=20"
     networks:
       - network_public
