--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -31,7 +31,8 @@ services:
         - "traefik.http.services.backend-api.loadbalancer.server.port=8000"
         - "traefik.http.routers.backend-api.entrypoints=web,websecure"
         - "traefik.http.routers.backend-api.tls.certresolver=letsencryptresolver"
-        - "traefik.http.middlewares.backend-api-headers.headers.customrequestheaders.X-Forwarded-Prefix=/api"
+        # Corrigindo o prefixo para incluir a versão da API
+        - "traefik.http.middlewares.backend-api-headers.headers.customrequestheaders.X-Forwarded-Prefix=/api/v1"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolallowheaders=*"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=*"
