--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,13 @@
   "name": "mibitech-frontend",
   "version": "1.0.0",
   "description": "Frontend for MibiTech - IT Solutions Company",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --verbose server.js",
+    "test": "node tests/model_tests.js",
+    "test:models": "cross-env NODE_ENV=test node -r dotenv/config tests/model_tests.js"
   },
   "keywords": [
     "mibitech",
@@ -19,8 +21,10 @@
   "author": "MibiTech",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.22"
   }
 }
