--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,20 +3,25 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci --only=production
 COPY . .
+RUN npm run build
 
 # Runtime stage
 FROM node:20-alpine
 WORKDIR /app
+ENV NODE_ENV=production
 
-# Copy from builder
-COPY --from=builder /app /app
+# Copy only necessary files from builder
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/server.js ./
 
 # Install dependencies
 RUN npm install
 
-# Health check - teste de sanidada
+# Health check
 HEALTHCHECK --interval=30s --timeout=3s \
   CMD curl -f http://localhost:3000/ || exit 1
 
