Versao final com contatos lendo e gravando no DB v3

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci --only=production
 COPY . .
-RUN npm run build
 
 # Runtime stage
 FROM node:20-alpine
@@ -15,11 +14,11 @@ ENV NODE_ENV=production
 # Copy only necessary files from builder
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/views ./views
+COPY --from=builder /app/controllers ./controllers
+COPY --from=builder /app/models ./models
 COPY --from=builder /app/server.js ./
-
-# Install dependencies
-RUN npm install
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s \
