--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "dev": "nodemon --verbose server.js",
     "test": "node tests/model_tests.js",
-    "test:models": "cross-env NODE_ENV=test node -r dotenv/config tests/model_tests.js"
+    "test:models": "cross-env NODE_ENV=test node -r dotenv/config tests/model_tests.js",
+    "build:css": "tailwindcss -i src/styles/tailwind.css -o public/css/tailwind.css --minify",
+    "watch:css": "tailwindcss -i src/styles/tailwind.css -o public/css/tailwind.css --watch"
   },
   "keywords": [
     "mibitech",
@@ -21,7 +23,11 @@
   "author": "MibiTech",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express": "^5.1.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.17"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
