--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         - "traefik.http.routers.backend.tls.certresolver=letsencryptresolver"
         - "traefik.http.middlewares.cors-headers.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
         - "traefik.http.middlewares.cors-headers.headers.accesscontrolallowheaders=*"
-        - "traefik.http.middlewares.cors-headers.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.cors-headers.headers.accesscontrolalloworiginlist=https://appteste.mibitech.com.br"
         - "traefik.http.middlewares.cors-headers.headers.accesscontrolmaxage=100"
         - "traefik.http.middlewares.cors-headers.headers.addvaryheader=true"
         - "traefik.http.routers.backend.middlewares=cors-headers@docker"
@@ -35,7 +35,7 @@ services:
         - "traefik.http.middlewares.backend-api-headers.headers.customrequestheaders.X-Forwarded-Prefix=/api/v1"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,DELETE"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolallowheaders=*"
-        - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.cors-api.headers.accesscontrolalloworiginlist=https://appteste.mibitech.com.br"
         - "traefik.http.middlewares.cors-api.headers.accesscontrolmaxage=100"
         - "traefik.http.middlewares.cors-api.headers.addvaryheader=true"
         - "traefik.http.routers.backend-api.middlewares=backend-api-headers@docker,cors-api@docker"
